[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Andrew"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
#disallow_untyped_defs = True
#warn_return_any = True
#exclude = "venv"

[tool.black]
line-length = 119
exclude = ".git"

[tool.isort]
line-length = 119
